--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <!-- (Optional) Latest compiled and minified JavaScript translation files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
   </head>
-  <body class="container-fluid" style="margin: 1px; padding: 0">
+  <body>
     <app-root></app-root>
   </body>
 </html>
