--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,8 @@
 
     <!-- (Optional) Latest compiled and minified JavaScript translation files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmLDuLoNLW7M7Z8EqgIdwi_a2J0lF_dhs"></script>
   </head>
   <body>
     <app-root></app-root>
