ajuste del mapa para recibir informacion

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CambiosCentros</title>
-    <base href="/" />
+    <base href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
@@ -52,6 +52,11 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmLDuLoNLW7M7Z8EqgIdwi_a2J0lF_dhs"
+    ></script>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -63,11 +68,7 @@
 
     <!-- (Optional) Latest compiled and minified JavaScript translation files -->
 
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmLDuLoNLW7M7Z8EqgIdwi_a2J0lF_dhs"
-    ></script>
+    
   </head>
   <body>
     <app-root></app-root>
